Increasing performance for page loads
And fixing some minor issues here and there

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 You can find me in a variety of places. In the last year, I've driven over 20,000 miles to visit 17 major cities in the US of A (and danced like crazy), received a Bachelor of Science from the University of Washington, said goodbye to my wonderful apartment in Seattle, and started working as a Software Engineer in San Jose. You can find my previous work below.
             </p>
             <p>
-                <a href="Bradly_Schlenker_Resume.pdf" target="_blank" alt="Resume"><i class="fa fa-file-text fa-2x"></i></a>
-                <a href="https://github.com/bradlys" target="_blank" alt="GitHub"><i class="fa fa-github fa-2x"></i></a>
-                <a href="https://linkedin.com/in/bradlys" target="_blank" alt="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                <a href="https://angel.co/bradly" target="_blank" alt="AngelList"><i class="fa fa-angellist fa-2x"></i></a>
-                <a href="https://twitter.com/bradlyschlenker" target="_blank" alt="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
-                <a href="https://medium.com/@bradlys" target="_blank" alt="Medium"><i class="fa fa-medium fa-2x"></i></a>
-                <a href="https://www.youtube.com/channel/UCjeFgsYRg29oAu9PnxfGs2Q" target="_blank" alt="YouTube"><i class="fa fa-youtube fa-2x"></i></a>
+                <a href="Bradly_Schlenker_Resume.pdf" class="fa fa-file-text fa-2x" target="_blank"></a>
+                <a href="https://github.com/bradlys" class="fa fa-github fa-2x" target="_blank"></a>
+                <a href="https://linkedin.com/in/bradlys" class="fa fa-linkedin-square fa-2x" target="_blank"></a>
+                <a href="https://angel.co/bradly" class="fa fa-angellist fa-2x" target="_blank"></a>
+                <a href="https://twitter.com/bradlyschlenker" class="fa fa-twitter fa-2x" target="_blank"></a>
+                <a href="https://medium.com/@bradlys" class="fa fa-medium fa-2x" target="_blank"></a>
+                <a href="https://www.youtube.com/channel/UCjeFgsYRg29oAu9PnxfGs2Q" class="fa fa-youtube fa-2x" target="_blank"></a>
             </p>
         </div>
         <div id="bradly" class="grid_5 omega">
@@ -100,7 +100,7 @@
             <ul>
                 <li><b>What:</b> Google Chrome Extension that enables job searching functionality on CrunchBase</li>
                 <li><b>How:</b> ES6 JavaScript and Google Chrome APIs! (Also voodoo)</li>
-                <li><b>Why:</b> You hate searching for jobs and so do I. This helps.</a></li>
+                <li><b>Why:</b> You hate searching for jobs and so do I. This helps.</li>
             </ul>
         </div>
     </div>
@@ -110,13 +110,13 @@
         <div class="grid_12 content center">
             <h1>Contact me</h1>
             <div class="grid_4 omega">
-                <a class ="btn" href="Bradly_Schlenker_Resume.pdf" target="_blank" alt="Résumé">Résumé</a>
+                <a class="btn" href="Bradly_Schlenker_Resume.pdf" target="_blank">Résumé</a>
             </div>
             <div class="grid_4 omega">
-                <a class ="btn" class="round" href="https://linkedin.com/in/bradlys" target="_blank" alt="LinkedIn">LinkedIn</a>
+                <a class="btn" href="https://linkedin.com/in/bradlys" target="_blank">LinkedIn</a>
             </div>
             <div class="grid_4 omega">
-                <a class ="btn" href="https://github.com/bradlys" target="_blank" alt="GitHub">GitHub</a>
+                <a class="btn" href="https://github.com/bradlys" target="_blank">GitHub</a>
             </div>
         </div>
     </div>
