--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="slide" id="jackalope" data-stellar-background-ratio="0.5">
     <div class="container clearfix">
         <div class="grid_12 content">
-            <h1><a href="https://github.com/bradlys/existential-jackalope" target="_blank">Existential-Jackalope</a></h1>
+            <h1><a href="https://github.com/bradlys/existential-jackalope" target="_blank">Existential Jackalope</a></h1>
             <ul>
                 <li><b>What:</b> Website used by dance organizers to list their events on a regional calendar.</li>
                 <li><b>How:</b> Node.js, Express, AngularJS, MongoDB, a gluttony of magic, and a hint of deep thought.</li>
