--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
         </div>
         <div id="bradly" class="grid_5 omega">
-            <img src="images/bradly.png">
+            <img src="images/bradly.jpg">
         </div>
     </div>
 </div>
